# ShadowPlay

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  utils.py
snipp_shadowplay/: cli.py  config.py  utils.py  watcher.py
snipp_uploader/: cli.py  config.py  utils.py  watcher.py
